# rocket-rs

./: Cargo.toml  README.md
src/: main.rs
templates/backend/layouts/: auth.html.tera
templates/backend/login/: forgot_password.html.tera  login.html.tera  signup.html.tera
templates/layouts/: auth.html.tera
templates/pages/: 404.html.tera  422.html.tera  500.html.tera  base.html.tera  forgot_password.html.tera  login.html.tera  signup.html.tera
