[package]
name = "rocket-rs"
version = "0.2.0"
edition = "2021"
description = "A template for starting a full stack Rocket app using Cargo."
authors = ["Evgeny Ukhanov <mrlsd@ya.ru>", "Mahmoud Harmouch <oss@wiseai.dev>"]

[dependencies]
rocket = { version = "=0.5.0-rc.3" }
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["handlebars", "tera"] }